# alcf_clearml_deployment

./: .env.example  README.md  launch_clearml_agent.sh  pyproject.toml  requirements.txt
.docs/: architecture.md
clearml_bridges/clearml_globus_bridge/: README.md  __init__.py  configure_slurm_endpoint.py  data_movement.py  get_globus_token.py  globus_auth.py  globus_compute_launcher.py  globus_data_mover.py  list_endpoints.py  submit_globus_job.py
clearml_bridges/clearml_iri_bridge/: README.md  __init__.py  _shared.py  iri_launcher.py  submit_iri_job.py
clearml_globus_bridge/: __init__.py  configure_pbs_endpoint.py  globus_compute_launcher.py  submit_globus_job.py
client/: launch_clearml_agent.sh
client/polaris/: clearml.conf
clients/: README.md  clearml.conf  install_clearml.sh  launch_clearml_agent.sh
clients/aurora/: conda.sh  setup_env.sh
clients/clearml_agent_setup/: README.md  install_clearml.sh  launch_clearml_agent.sh  launch_local_agent.sh  pbs.template
clients/clearml_agent_setup/aurora/: conda.sh  pbs.template  system.conf
clients/clearml_agent_setup/crux/: conda.sh
clients/clearml_agent_setup/frontier/: README.md  clearml.conf  conda.sh  setup_env.sh  slurm.template
clients/clearml_agent_setup/perlmutter/: README.md  conda.sh  setup_env.sh  slurm.template  system.conf
clients/clearml_agent_setup/polaris/: pbs.template
clients/clearml_agent_setup/sirius/: conda.sh  pbs.template
clients/globus_endpoint_setup/: ENDPOINT_CONFIG_JSON.md  README.md
clients/perlmutter/: README.md  conda.sh  setup_env.sh
clients/polaris/: pbs.template
clients/sirius/: pbs.template
docs/: compute.md  endpoints.md  transfer.md  troubleshooting.md
examples/data/: dolma.py  test_creation.py
examples/data_catalog/: README.md  cifar10.py  dolma.py  hf_c4.py  hf_dataset.py  test_creation.py  test_download.py  test_upload_link.py
examples/data_movement/: README.md  launch_transfer.py  transfer_globus.py
examples/experiment_tracking/: io_test.py  launch_mnist_job.py
examples/experiment_tracking/tranlation_from_other_tools/: README.md  requirements.txt  resnet50_clearml.py  resnet50_wandb.py
examples/job_launching/: README.md
examples/pipeline/: README.md  pipeline_different_systems.py  pipeline_from_decorator.py  pipeline_from_functions.py  requirements.txt
server/: README.md  launch_venv_services_queue.sh  setup.sh
server/globus_auth/: .env.example  ACCESS_PERMISSION_CONTROL.md  ENABLE_GLOBUS_AUTH.md  README.md  install_systemd_service.sh  launch_connector.sh  main.py  requirements.txt  token_store.py
server/globus_connector/: .env.example  README.md  install_systemd_service.sh  launch_connector.sh  main.py  token_store.py
server/mcp/: README.md  __init__.py  clearml_query_server.py
tests/: setup.sh  test_iri_bridge.py
tests/data/: README.md  dolma.py  test_creation.py  test_download.py  test_upload_link.py
tests/data_movement/: README.md  launch_transfer.py
tests/experiment_tracking/: io_test.py  launch_io_job.py  launch_mnist_job.py  pytorch_mnist.py
tests/job_launching/: README.md  test.py  test_queue.py
tests/pipeline/: README.md  pipeline_different_systems.py  pipeline_from_decorator.py  pipeline_from_functions.py  pipeline_from_tasks.py  requirements.txt
(+90 files in other folders)
